--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <input class="form-control text-box" type="text" ng-model="message" placeholder="Message">
       </form>
       <div class="messages-container">
-        <p ng-repeat="message in messages ">
-          {{message.message}} </p>
+        <p ng-repeat="m in messages" ng-options="sort.value as sort.name for sort in sortingOptions">
+          {{m.message}} "{{m.createdAt}}"</p>
       </div>
     </div>
     <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.2.19.min.js"></script>
